[package]
name = "lrilrelra-api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
shuttle-runtime = "0.48.0"
axum = "0.7.5"
shuttle-axum = "0.48.0"
tokio = "1.38.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.125"
surrealdb = "1.5.4"
once_cell = "1.19.0"
config = "0.14.0"
dotenvy = "0.15.7"
